# moomoolah

./: CLAUDE.md  Makefile  README.md  demo_state.json  plan.md  pyproject.toml
moomoolah/: budget_app.py  state.py
personal_budget/: budget_app.py  state.py  style.css  widgets.py
scripts/: process_readme.py  release.sh  update_screenshots.py
tests/: test_budget_app.py  test_config.py  test_currency_config.py  test_state.py
