[project]
name = "personal-budget"
version = "0.1.0"
description = "Personal Budget Planner"
authors = [
    {name = "Elias Dorneles", email = "elias.dorneles@hey.com"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.52.1",
    "pydantic>=2.6.3",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "textual-dev>=1.5.1",
    "ipython>=8.22.1",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length=90
